--- a/iot-manager-api/src/main/resources/messages.properties
+++ b/iot-manager-api/src/main/resources/messages.properties
@@ -1,2 +1,3 @@
 mensagem.invalida="Mensagem inv\u00E1lida"
 mensagem.dispositivo.nao.encontrado="Dispositivo n\u00E3o encontrado"
+mensagem.recurso.duplicado="Recurso j\u00E1 existe"
